# Chess-Game

./: CHESS  CMakeLists.txt  Makefile  README.md
include/: Algo.hpp  Bishop.hpp  Board.hpp  BulletPlay.hpp  CustomPlay.hpp  Data.hpp  FreePlay.hpp  FritzPlay.hpp  Game.hpp  GameControl.hpp  GameType.hpp  King.hpp  Knight.hpp  LearnChess.hpp  LearnChessb.hpp  MainMenu.hpp  Pawn.hpp  Piece.hpp  Queen.hpp  RapidPlay.hpp  Rook.hpp  StartMenu.hpp  State.hpp
src/: About.cpp  Algo.cpp  Bishop.cpp  Board.cpp  BugHouse.cpp  BulletPlay.cpp  CustomPlay.cpp  Data.cpp  FreePlay.cpp  FritzPlay.cpp  Game.cpp  GameControl.cpp  GameType.cpp  King.cpp  Knight.cpp  LearnChess.cpp  LearnChessb.cpp  MainMenu.cpp  Pawn.cpp  Piece.cpp  Queen.cpp  RapidPlay.cpp  Rook.cpp  StartMenu.cpp  State.cpp  main.cpp
testFiles/: CMakeLists.txt  CorrectString.cpp  EnPassant.cpp  FunctionCheck.cpp  PawnTest.cpp  PointsCheck.cpp  PromotePawn.cpp  RookTest.cpp  TurnTest.cpp  checkingTime.cpp  main.cpp
